<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/custo_de_servico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/custo_do_servi_o"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/servico_pergunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avaliaria_o_servi_o_como"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custo_de_servico" />

    <RadioGroup
        android:id="@+id/gorjeta_opcoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/vinte_porcento"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/servico_pergunta">


        <RadioButton
            android:id="@+id/vinte_porcento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/espetacular_20" />

        <RadioButton
            android:id="@+id/dezoito_porcento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bom_18" />

        <RadioButton
            android:id="@+id/quinze_porcento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_15" />
    </RadioGroup>

    <Switch
        android:id="@+id/arredondar_gorjeta_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/arredondar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gorjeta_opcoes" />

    <Button
        android:id="@+id/calcular_botao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arredondar_gorjeta_switch" />

    <TextView
        android:id="@+id/gorjeta_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Valor: $10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calcular_botao" />
</androidx.constraintlayout.widget.ConstraintLayout>